[tool.poetry]
name = "whippet"
version = "0.3.2"
description = "Install make based git hooks with ease."
readme = "README.rst"
license = "MIT"
homepage = "https://github.com/BorePlusPlus/whippet"
authors = ["Dalibor Novak <BorePlusPlus@gmail.com>"]

[tool.poetry.scripts]
whippet = "whippet:console.main"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pygments = "^2.4"
pytest-watch = "^4.2"
mypy = "^0.720.0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
